objects/Checklist_de_visita__c.object
<CustomObject>
    <fields>
        <fullName>A_execucao_esta_sendo_cumprida__c</fullName>
        <label>A execução está sendo cumprida</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_primeira_marca_Pernod__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A primeira marca a ser oferecida foi alguma marca Pernod?</inlineHelpText>
        <label>1a. marca oferecida foi Pernod?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Abordagem_Produto_01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abordagem?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Abordagem_Produto_02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abordagem?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Abordagem_Produto_03__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abordagem?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Absolut_Confinado__c</fullName>
        <label>Absolut  Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Absolut_Estoque__c</fullName>
        <label>Absolut Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Absolut_Preco_Praticado__c</fullName>
        <label>Absolut Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Absolut_Quantidade_de_Frentes_na_Gondola__c</fullName>
        <label>Absolut Quantidade de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Absolut_Quantidade_de_pontos__c</fullName>
        <label>Absolut Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Absolut_Sell_in__c</fullName>
        <label>Absolut Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Absolut_Sell_out__c</fullName>
        <label>Absolut Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Absolut__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Absolut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Absolut_visual__c</fullName>
        <label>Absolut (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acoes_promocionais_da_semana__c</fullName>
        <label>Ações promocionais da semana</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acoes_promocionais_executadas__c</fullName>
        <inlineHelpText>As ações promocionais estão sendo executadas de maneira correta e eficiente?</inlineHelpText>
        <label>Ações promocionais executadas eficiencia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Almad_n_Preco_Praticado__c</fullName>
        <label>Almadén  Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Almaden_Confinado__c</fullName>
        <label>Almadén Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Almaden_Estoque__c</fullName>
        <label>Almadén Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Almaden_Quantidade_de_Frentes_na_Gondola__c</fullName>
        <label>Almadén Quantidade de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Almaden_Quantidade_de_pontos__c</fullName>
        <label>Almadén Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Almaden_Sell_in__c</fullName>
        <label>Almadén Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Almaden_Sell_out__c</fullName>
        <label>Almadén Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apresentou_resultados_do_mes_anterior__c</fullName>
        <label>Apresentou  resultados do mês anterior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atacadistas_E_mail__c</fullName>
        <label>Atacadistas E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Atacadistas_Endereco__c</fullName>
        <label>Atacadistas Endereço</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Atacadistas_Nome_do_PDV__c</fullName>
        <label>Atacadistas Nome do PDV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Atacadistas_Nome_do_Visitante__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Atacadistas Nome do Visitante</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists_de_visita1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Atacadistas_Para_cada_marca_de_produtos__c</fullName>
        <inlineHelpText>Para cada marca de produtos da Pernod Ricard.</inlineHelpText>
        <label>Atacadistas Para cada marca de produtos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Atacadistas_Telefone__c</fullName>
        <label>Atacadistas Telefone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ativacao__c</fullName>
        <description>Ativação para contrapartida de contrato. Somente On trade.</description>
        <label>Ativação</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avaliacao_do_atendimento_de_brigada__c</fullName>
        <label>Avaliação do atendimento de brigada</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balla_12_Confinado__c</fullName>
        <label>Balla 12 Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balla_12_Estoque__c</fullName>
        <label>Balla 12 Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balla_12_Preco_Praticado__c</fullName>
        <label>Balla 12 Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balla_12_Qtde_de_Frentes_na_Gondola__c</fullName>
        <label>Balla 12 Qtde de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balla_12_Quantidade_de_pontos__c</fullName>
        <label>Balla 12 Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balla_12_Sell_in__c</fullName>
        <label>Balla 12 Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balla_12_Sell_out__c</fullName>
        <label>Balla 12 Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ballantines__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Ballantines</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ballantines_visual__c</fullName>
        <label>Ballantines (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caixas_F_sicas_Others__c</fullName>
        <description>Caixas Físicas Others para produtos definidos no contrato. Somente On trade.</description>
        <label>Caixas Físicas Others</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Absolut__c</fullName>
        <description>Caixas Físicas Absolut de compra de produtos definidos no contrato. Somente On Trade.</description>
        <label>Caixas Físicas Absolut</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Ballantines__c</fullName>
        <description>Caixas fisicas Ballantines para compra de produtos definidos no contrato. Somente para On trade.</description>
        <label>Caixas Físicas Ballantines</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Chivas__c</fullName>
        <description>Caixas fisicas para produtos definidos no contrato. Somente para On trade.</description>
        <label>Caixas Físicas Chivas</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Havana__c</fullName>
        <description>Caixas Físicas Havana para produtos definidos no contrato. Somente On trade.</description>
        <label>Caixas Físicas Havana</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Jameson__c</fullName>
        <description>Caixas fisicas Jameson para produtos definidos no contrato. Somente On trade.</description>
        <label>Caixas Físicas Jameson</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Montilla__c</fullName>
        <description>Caixas fisicas montilla para prodiutos definidos no contrato. Somente on trade.</description>
        <label>Caixas Físicas Montilla</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Mumm_Cuvee__c</fullName>
        <description>Caixas Físicas Mumm Cuveé para produtos definidos no contrato. Somente On trade.</description>
        <label>Caixas Físicas Mumm Cuveé</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Natu_Nobilis__c</fullName>
        <description>Caixas fisicas Natu Nobilis para produtos definidos no contrato. Somente para On trade.</description>
        <label>Caixas Físicas Natu Nobilis</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Orloff__c</fullName>
        <description>Caixas fisicas Orloff para produtos definidos no contrato. Somente On trade.</description>
        <label>Caixas Físicas Orloff</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Passport__c</fullName>
        <description>Caixas fisicas passport para produtos definidos no contrato. Somente On trade.</description>
        <label>Caixas Físicas Passport</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Perrier_Jouet__c</fullName>
        <description>Caixas Físicas Perrier-Jouêt para produtos definidos no contrato. Somente On trade.</description>
        <label>Caixas Físicas Perrier-Jouêt</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Royal_Salute__c</fullName>
        <description>Caixas Físicas Royal Salute para produtos definidos no contrato. Somente On trade.</description>
        <label>Caixas Físicas Royal Salute</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caixas_Fisicas_Teachers__c</fullName>
        <description>Caixas fisicas Teachers para produtos definidos no contrato. Somente On trade.</description>
        <label>Caixas Físicas Teachers</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendario_da_acao_cumprido__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Calendário proposto para ação está sendo/foi cumprido?</inlineHelpText>
        <label>Calendário da ação cumprido ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cardapio__c</fullName>
        <description>Cardápio para contrapartidas de contrato. Somente On trade.</description>
        <label>Cardápio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chivas_12_Confinado__c</fullName>
        <label>Chivas 12 Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chivas_12_Estoque__c</fullName>
        <label>Chivas 12 Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_12_Preco_Praticado__c</fullName>
        <label>Chivas 12 Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chivas_12_Qtde_de_Frentes_na_Gondola__c</fullName>
        <label>Chivas 12 Qtde de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_12_Quantidade_de_pontos__c</fullName>
        <label>Chivas 12 Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_12_Sell_in__c</fullName>
        <label>Chivas 12 Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chivas_12_Sell_out__c</fullName>
        <label>Chivas 12 Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_18_Confinado__c</fullName>
        <label>Chivas 18 Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chivas_18_Estoque__c</fullName>
        <label>Chivas 18 Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_18_Preco_Praticado__c</fullName>
        <label>Chivas 18 Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chivas_18_Qtde_de_Frentes_na_Gondola__c</fullName>
        <label>Chivas 18 Qtde de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_18_Quantidade_de_pontos__c</fullName>
        <label>Chivas 18 Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_18_Sell_in__c</fullName>
        <label>Chivas 18 Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chivas_18_Sell_out__c</fullName>
        <label>Chivas 18 Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Chivas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chivas_visual__c</fullName>
        <label>Chivas (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_concordou_com_a_estrategia__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cliente concordou com a estratégia?</inlineHelpText>
        <label>De acordo com a estratégia?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coment_rios_Gerais__c</fullName>
        <label>Assuntos abordados</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coment_rios_Promotor__c</fullName>
        <label>Comentários</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coment_riosreuniao__c</fullName>
        <label>Assuntos abordados</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comentarios__c</fullName>
        <label>Comentários</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comentarios_sobre_Acoes_Promocionais__c</fullName>
        <label>Comentários sobre Ações Promocionais</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comentarios_sobre_as_contrapartidas__c</fullName>
        <inlineHelpText>Comentários sobre as contrapartidas do contrato.</inlineHelpText>
        <label>Comentários sobre as contrapartidas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comunicao__c</fullName>
        <description>Comunicação para contrapartidas de contrato. Somente para On Trade.</description>
        <label>Comunicação</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concorrente_Anunciado_01__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Concorrente 01</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipLabel>Checklist de Visitas (Concorrente Anunciado 01)</relationshipLabel>
        <relationshipName>Checklists_de_visita3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concorrente_Anunciado_02__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Concorrente 02</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipLabel>Checklist de Visitas (Concorrente Anunciado 02)</relationshipLabel>
        <relationshipName>Checklists_de_visita4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concorrente_Anunciado_03__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Concorrente 03</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipLabel>Checklist de Visitas (Concorrente Anunciado 03)</relationshipLabel>
        <relationshipName>Checklists_de_visita5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Condicoes_de_material_promocional__c</fullName>
        <label>Condições de material promocional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultoria_de_Mixologistas__c</fullName>
        <description>Consultoria de Mixologistas para contrapartida de contrato. Somente para On trade.</description>
        <label>Consultoria de Mixologistas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conta_Visita_REP__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conta Visita REP</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contrapartidas_ok__c</fullName>
        <label>Contrapartidas ok?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Ate_Produto_01__c</fullName>
        <label>Data Até:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Ate_Produto_02__c</fullName>
        <label>Data Até:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Ate_Produto_03__c</fullName>
        <label>Data Até:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_De_Produto_01__c</fullName>
        <label>Data De:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_De_Produto_02__c</fullName>
        <label>Data De:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_De_Produto_03__c</fullName>
        <label>Data De:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_da_Coleta__c</fullName>
        <label>Data da Coleta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degusta_o_Produto_01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Degustação?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Degusta_o_Produto_02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Degustação?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Degusta_o_Produto_03__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Degustação?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demonstrador_Produto_Concorrente_01__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto 01</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipLabel>Checklist de Visitas (Demonstrador Produto Concorrente 01)</relationshipLabel>
        <relationshipName>Checklists_de_visita8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demonstrador_Produto_Concorrente_02__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto 02</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipLabel>Checklist de Visitas (Demonstrador Produto Concorrente 02)</relationshipLabel>
        <relationshipName>Checklists_de_visita9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demonstrador_Produto_Concorrente_03__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto 03</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipLabel>Checklist de Visitas (Demonstrador Produto Concorrente 03)</relationshipLabel>
        <relationshipName>Checklists_de_visitaApv0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dev_Controle_Planejamento__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dev Controle Planejamento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documentacao_Pendente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se há documentação pendente.</description>
        <label>Documentação Pendente ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Endereco__c</fullName>
        <label>Endereço</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipe_Distribuidor_Data__c</fullName>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipe_Distribuidor_Local__c</fullName>
        <label>Local</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipe_Distribuidor_Participantes__c</fullName>
        <label>Nº de Participantes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Absolut__c</fullName>
        <label>Estoque Caixas Físicas Absolut</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Ballantines__c</fullName>
        <label>Estoque Caixas Físicas Ballantines</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Chivas__c</fullName>
        <label>Estoque Caixas Físicas Chivas</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Havana__c</fullName>
        <label>Estoque Caixas Físicas Havana</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Jameson__c</fullName>
        <label>Estoque Caixas Físicas Jameson</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Montilla__c</fullName>
        <label>Estoque Caixas Físicas Montilla</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Mumm_Cuvee__c</fullName>
        <label>Estoque Caixas Físicas Mumm Cuveé</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Natu_Nobilis__c</fullName>
        <label>Estoque Caixas Físicas Natu Nobilis</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Orloff__c</fullName>
        <label>Estoque Caixas Físicas Orloff</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Others__c</fullName>
        <label>Estoque Caixas Físicas Others</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Passport__c</fullName>
        <label>Estoque Caixas Físicas Passport</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Perrier_Jouet__c</fullName>
        <label>Estoque Caixas Físicas Perrier-Jouêt</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Royal_Salute__c</fullName>
        <label>Estoque Caixas Físicas Royal Salute</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estoque_Caixas_Fisicas_Teachers__c</fullName>
        <label>Estoque Caixas Físicas Teachers</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existe_tabloide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existe tabloide?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exposi_o_Extra_Pergunta_01__c</fullName>
        <defaultValue>&quot;Existe exposição de Whiskies fora da gôndola?  Ilha, Terminal, Orelha, Display&quot;</defaultValue>
        <label>01</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exposi_o_Extra_Pergunta_02__c</fullName>
        <defaultValue>&quot;Existe exposição de Whiskies fora da gôndola?  Orelha, Display&quot;</defaultValue>
        <label>02</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exposi_o_Extra_Pergunta_03__c</fullName>
        <defaultValue>&quot;Existe exposição de Vodka fora da gôndola? Ilha, Terminal, Orelha, Display&quot;</defaultValue>
        <label>03</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exposi_o_G_ndola_Pergunta_02__c</fullName>
        <defaultValue>&quot;Chivas 12 é maior ou igual a 50% do espaço de JWBlack?&quot;</defaultValue>
        <label>02</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exposi_o_G_ndola_Pergunta_03__c</fullName>
        <defaultValue>&quot;Balla Finest está posicionado ao lado de JWRed?&quot;</defaultValue>
        <label>03</label>
        <type>TextArea</type>
    </fields>
</CustomObject>